GeneWeb version 4.01
--------------------

* Languages
  - [14 Mar 01] Added Brazilian Portuguese (Paulo Francisco Sedrez).

* GeneWeb server or CGI (gwd)
  - [13 Mar 01] Fixed problem in displaying "anniversaries month"
    in Estonian: the month appeared with all its declinations.

* Lexicon (lang/lexicon.txt)
  - [14 Mar 01] Changed the French translation of "nth cousin":
    indeed, in French, the "nth cousin" is translated, litterally, by
    "cousin of the pth degree" where "p" is "2n+2": e.g. a "4th cousin" is
    "a cousin of the 10th degree". Perhaps the same thing has to be done
    in other languages...
  - [14 Mar 01] Changed the "*nth (cousin)*" entry to directly
    represent what has to be used to translate the "nth". Previously, it
    was "indirect", looking for another entry in the lexicon, which was
    complicated to understand, for the GeneWeb translators.

GeneWeb version 4.00
--------------------

The new version number (4.00) is in honour of:
   1/ the new installer for Windows
   2/ the new port to MacOS X.

* Installation
  - [04 Mar 01] Added version for MacOS X.
  - [03 Mar 01] Changed Linux rpm package installation; it uses now
    another directory for data bases (/home/geneweb/bases). Not removed
    when unstallation, it can be used for the future GeneWeb versions,
    without requiring it to be moved.
  - [23 Fev 01] Windows version: added an "installer" (therefore
    an installation normally easier). The data bases are put in
    a directory different from the program, therefore not deleted when
    the program is uninstalled, and can be directly usable if another
    version is installed.

* Languages
  - [27 Feb 01] Added Polish (Sebastian Tuszynski)
  - [11 Feb 01] Added Catalan (Jaume Ramisa Elias)

* GeneWeb server or CGI (gwd)
  - [08 Mar 01] Added macro %i usable in person notes: it is replaced by
    firstname.num.surname (from the person key, which is used for his
    default image).